# CMakeList.txt : CMake project for Data-Structures-Project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Data-Structures-Project "Data-Structures-Project.cpp" "Data-Structures-Project.h")

# TODO: Add tests and install targets if needed.
